# Anti-Extraction

./: .gitignore  README.md  dataset_generation.py  pyproject.toml
configs/: attack.yaml  attack_k3.yaml  importance_test.yaml  probe.yaml
data/synthetic/: labels.json  labels.jsonl
data/synthetic_dataset/: labels.json  labels.jsonl
data/ui_dataset/: labels_pil.json  labels_pil.jsonl  labels_playwright.json  labels_playwright.jsonl  ui_dataset_content_bank.json
dataset_generation/UI/: README.md  backends.py  generate_content.py  patch_identifiers.py  pil_renderer.py  playwright_renderer.py  render_from_content.py  render_images.py
dataset_generation/synthetic/: dataset_generation_syn.py
scripts/: attention_diagnostic.py  check_transcription_quality.py  run_attack.py  run_probe.py  run_targeted_pgd.py  summarise_results.py  sweep_strikethrough_decoy.py  test_importance_spartan.py  test_salience_spartan.py  test_token_logprobs.py  test_top_k_logprobs.py  verify_targeted_eval.py  verify_targeted_grad.py  verify_watermark_candidates.py  verify_watermark_renderer.py
smoke_tests/: run_llama_smoke.py  run_llava_smoke.py  run_qwen_smoke.py  test_llama_wrapper.py  test_llava_wrapper.py  test_qwen25vl_grad.py
src/anti_extraction/: __init__.py
vlm_suppress/: config.py
vlm_suppress/attack/: constraints.py  ensemble.py  importance.py  losses.py  masks.py  pgd.py  probe.py  salience.py  targeted_pgd.py  transforms.py
vlm_suppress/data/: dataset.py
vlm_suppress/eval/: metrics.py  visualise.py
vlm_suppress/logging/: logger.py
vlm_suppress/models/: base.py  (+12 more)
(+7 files in other folders)
