[project]
name = "anti-extraction"
version = "0.1.0"
description = "Selective visual text suppression against frontier VLMs"
readme = "README.md"
authors = [
    { email = "xxx@unimelb.edu.au" }
]
requires-python = ">=3.12.12"
dependencies = [
    # Core
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy>=1.26.0",
    "pillow>=10.3.0",
    "opencv-python>=4.9.0",
    # Config + CLI
    "pyyaml>=6.0.1",
    "dacite>=1.8.1",
    "typer>=0.12.0",
    "python-dotenv>=1.0.1",
    # Metrics
    "jiwer>=3.0.4",
    "lpips>=0.1.4",
    # Surrogate model dependencies
    "transformers>=4.42.0",
    "accelerate>=0.30.0",
    "sentencepiece>=0.2.0",
    "einops>=0.8.0",
    "timm>=1.0.3",
    "huggingface-hub>=0.23.0",
    # Frontier APIs
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "anthropic>=0.28.0",
    # Utilities
    "tqdm>=4.66.0",
    "matplotlib>=3.9.0",
    "scipy>=1.13.0",
    "scikit-image>=0.23.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
# Tells uv to treat the local vlm_suppress package as editable
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
